--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Release to GitHub Pages
         env:
           USE_SSH: true
-          GIT_USER: git
+          GIT_USER: git          
+          DEPLOYMENT_BRANCH: gh-pages
         run: |
           git config --global user.email "actions@gihub.com"
           git config --global user.name "gh-actions"
@@ -60,5 +61,4 @@ jobs:
           else
           npm i
           fi
-          DEPLOYMENT_BRANCH=gh-pages
           npx docusaurus deploy
