--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          echo "%KEY%" > ~/.ssh/id_ed25519
+          echo $KEY > ~/.ssh/id_ed25519
           cat ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           cat <<EOT >> ~/.ssh/config
@@ -48,6 +48,7 @@ jobs:
           HostName github.com
           IdentityFile ~/.ssh/id_ed25519
           EOT
+        shell: bash
       - name: Release to GitHub Pages
         env:
           USE_SSH: true
