--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Add key to allow access to repository seb
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-          KEY: ${{ secrets.TEST }}
+          KEY: ${{ secrets.GH_DEPLOY_PAGES }}
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
