--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Add key to allow access to repository seb
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-          KEY: ${{ secrets.GH_DEPLOY_PAGES }}
+          KEY: ${{ secrets.GH_DEPLOY_PAGES_RSA }}
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          echo $KEY > ~/.ssh/id_ed25519
+          echo $KEY > ~/.ssh/id_25519
           cat ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           cat <<EOT >> ~/.ssh/config
