--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -40,13 +40,12 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          echo $KEY > ~/.ssh/id_25519
-          cat ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
+          echo $KEY > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           cat <<EOT >> ~/.ssh/config
           Host github.com
           HostName github.com
-          IdentityFile ~/.ssh/id_ed25519
+          IdentityFile ~/.ssh/id_rsa
           EOT
         shell: bash
       - name: Release to GitHub Pages
